tree-sitter-mos/test/corpus/feature_scenario.txt
==================
Feature with scenarios
==================

contract "CON-1" {
  feature "Deprecation" {
    scenario "Deprecated field triggers warning" {
      given {
        a client sends a request
      }
      when {
        the API processes it
      }
      then {
        the response includes a warning
      }
    }
  }
}

---

(source_file
  (artifact
    (artifact_type
      (identifier))
    (string)
    (block
      (block_item
        (feature_block
          (string)
          (scenario_block
            (string)
            (scenario_content
              (given_block
                (step_line))
              (when_block
                (step_line))
              (then_block
                (step_line)))))))))
