tree-sitter-mos/test/corpus/group.txt
==================
Group with scenarios
==================

contract "X" {
  feature "API" {
  group "Deprecation" {
    scenario "Warning header" {
      given {
        client uses deprecated field
      }
      then {
        warning is present
      }
    }
    scenario "No warning for stable" {
      then {
        no warning
      }
    }
  }
  }
}

---

(source_file
  (artifact
    (artifact_type
      (identifier))
    (string)
    (block
      (block_item
        (feature_block
          (string)
          (group_block
            (string)
            (scenario_block
              (string)
              (scenario_content
                (given_block
                  (step_line))
                (then_block
                  (step_line))))
            (scenario_block
              (string)
              (scenario_content
                (then_block
                  (step_line))))))))))
